NULL derefefence
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
added Component::Interface: Qt Severity::normal Type::bug labels
- Rémi Denis-Courmont changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Edward Wang assigned to @edwardw and unassigned @jbk
- Edward Wang added Difficulty::medium label
added Difficulty::medium label
- Edward Wang changed milestone to %2.0.2
changed milestone to %2.0.2
- Jean-Baptiste Kempf added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf closed
closed
commit 9340c4da Author: Edward Wang edward.c.wang@compdigitec.com Date: Sun Mar 25 01:17:03 2012 -0400
Qt4: Account for rare case when video loads too quickly Close [#6481](https://code.videolan.org/videolan/vlc/-/issues/6481) Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
Original author: edward.c.wang@compdigitec.com
- Rémi Denis-Courmont mentioned in issue #6797 (closed)
mentioned in issue #6797 (closed)
Please register or sign in to reply