Qt4: Account for rare case when video loads too quickly

Close #6481

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>